scrollbar fixaus4

--- a/client/src/oma.css
+++ b/client/src/oma.css
@@ -12,7 +12,7 @@ body {
 
 /*  */
 .grid-subContainer { 
-  height: 100vh;
+  height: 90vh;
   width: 100vw;
   grid-column-start: 2;
   grid-column-end: 3;
@@ -44,7 +44,7 @@ body {
 }
 
 .content {
-  overflow-y: auto;
+  overflow-y: scroll;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
   color:#3f51b5;
